      ElementNamePreferences (Preferences => Element names) fixed <2>
- 05: Bugfix 497: Several defects on StrukTeX export mended <2>
- 05: Issue 415: Find&Replace dialog now regains focus when summoned again <2>
- 05: Issue 04: Several new and redesigned icons (for better scalability) <2>
- 05: Enh. #490: Turtleizer routines individually re-nameable [A. Brusinsky]2

Version 3.27 (2017.10.30)
- 01: Issue #312: Work area now ensured to get initial focus <2>
- 01: Issue #319: Arranger index indicates "covered" status via icon now <2>
- 01: Issue #101: A dependent Structorizer now shows instance number in title <2>
- 01: Enh. #329: New Analyser warning on variable names "I", "l", or "O" <2>
- 01: Bugfix #330: With "Nimbus" look & feel checkbox states weren't visible <2>
- 01: Issue #81: DPI awareness workaround (GUI scaling) substantially improved <2>
- 01: Issue #81: New Preferences menu item "GUI Scaling" to preset next start <2>
- 02: Bugfix #233: Element insertion by keys F6 and F8 didn't work <2>
- 02: Issue #305: Diagram name and dirtiness changes notified to arranger index <2>
- 02: Enh. #333: Compound comparison operators displayed as symbols ≠, ≤, ≥ <2>
- 02: Enh. #335: Pascal/BASIC variable declarations in instructions tolerated <2>
- 02: Bugfix #336: Variable list proposed by code generators for declaration <2>
- 02: Issue #306: Possibility to start with several diagrams from command line <2>
- 02: Enh. #290: Start from command line with Arranger files as arguments, too <2>
- 02: Enh. #335: Type info retrieval for enhanced declarations on code export <2>
- 02: Bugfix #337: Code export of 2d arrays and nested index access mended <2>
- 02: Issue #113: More sophisticated code export w.r.t. array parameter types <2>
- 03: Issue #340: Silent NullPointerExceptions on Structorizer/Arranger start <2>
- 03: Wrong warnings on leave/break instruction export to C, Java etc. removed <2>
- 03: Bugfix #341: Wrong string literal detection with single and double quotes <2>